2002-11-22  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Fixed typo: PTHREAD_PRIO_MIN ->
	PTHREAD_PRIO_MAX. (Laurent Vivier, #99293)

Fri Nov 22 09:39:09 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/gmacros.h: Remove broken G_HIDDEN_SYMBOL
	definition which wasn't supposed to be committed
	at all.

Thu Nov 21 16:19:21 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/ghash.c: Patch from Morten Welinder to 
	make ghash.c properly obey DISABLE_MEM_POOLS. (#96600)

Thu Nov 21 14:09:44 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/gmacros.h: Add G_GNUC_DEPRECATED. (Tom Tromey,
	#87969)

2002-11-21  Tor Lillqvist  <tml@iki.fi>

	* config.h.win32.in: Update to match what is currently produced by
	autotools.

	* configure.in: Remove superfluous spaces on two shell variable
	assignment lines. Don't define HAVE_GOOD_PRINTF as 0 if we don't
	have a good printf, it is tested with #ifdef.

	* glib/glib.def: Add new functions.

	* glib/Makefile.am: If !HAVE_GOOD_PRINTF, add libtrio.la to LIBADD
	and DEPENDENCIES.

	* glib/glib.rc.in
	* gmodule/gmodule.rc.in
	* gobject/gobject.rc.in
	* gthread/gthread.rc.in
	* {glib,gmodule,gobject,gthread}/makefile.{mingw,msc}.in:
	Hardcode 2.0 in the names, as that is what Makefile.am does.

2002-11-21  Matthias Clasen  <maclas@gmx.de>

	Include a printf implementation supporting C99 snprintf and SUS
	positional parameters:  (#79488)
	
	* glib/gstrfuncs.c:
	* glib/gspawn-win32.c:
	* glib/gscanner.c:
	* glib/gconvert.c: 
	* glib/gbacktrace.c: Use _g_printf wrappers. 

	* glib/gutils.c (g_vsnprintf): Simplify, since we can assume C99
	snprintf semantics now.

	* glib/gmessages.c (printf_string_upper_bound): No longer needed,
	since we can assume C99 snprintf semantics now.
	(g_logv): Simplify.
	
	* acinclude.m4 (AC_FUNC_PRINTF_UNIX98): New macro to check wether
	printf supports SUS positional parameters.

	* configure.in: New option --enable-included-printf to force